--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-flask=1.0.2=py36_1
-gunicorn==19.9.0
-itsdangerous=0.24=py36hb6c5a24_1
-jinja2=2.10=py36h292fed1_0
-matplotlib=2.2.2=py36h153e9ff_1
-numpy=1.17.2=pypi_0
-numpy-base=1.14.3=py36h555522e_1
-pandas=0.23.0=py36h830ac7b_0
-pickleshare=0.7.4=py36h9de030f_0
-scikit-learn=0.19.1=py36h53aea1b_0
-scipy=1.1.0=py36h672f292_0
-werkzeug=0.14.1=py36_0
+Click==7.0
+Flask==1.1.1
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+numpy==1.18.1
+regex==2020.1.8
+Werkzeug==1.0.0
