--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-Click==7.0
-Flask==1.1.1
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-numpy==1.18.1
-regex==2020.1.8
-Werkzeug==1.0.0
+appdirs==1.4.3
+configparser==4.0.2
+contextlib2==0.6.0.post1
+distlib==0.3.0
+filelock==3.0.12
+importlib-metadata==1.5.0
+importlib-resources==1.0.2
+nltk==3.4.5
+pathlib2==2.3.5
+scandir==1.10.0
+singledispatch==3.4.0.3
+six==1.14.0
+typing==3.7.4.1
+virtualenv==20.0.1
+zipp==1.1.0
